update side anchors, add 13th slide, updated photos
Signed-off-by: Sean Harrington <sean@never-not.com>

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                     </div>
                 </div>
             </div>
-            <!-- SECTION 1 -->
+            <!-- SECTION 1 # Profile: Jordan (slide 1) -->
             <div class="section fp-tablecell-auto" data-section="1">
                 <div class="bg object-fit">
                     <img src="./img/slides/profile-jordan-slide1-original.jpg" alt="">
@@ -349,7 +349,7 @@
                     </div>
                 </div>
             </div>
-            <!-- SECTION 2 -->
+            <!-- SECTION 2 # Profile: Jordan (slide 2) -->
             <div class="section fp-tablecell-auto" data-section="2">
                 <div class="bg object-fit">
                     <img src="./img/slides/profile-jordan-slide2-original.jpg" alt="">
@@ -377,7 +377,7 @@
                     </div>
                 </div>
             </div>
-            <!-- SECTION 3 -->
+            <!-- SECTION 3 # Example: HPTN -->
             <div class="section fp-tablecell-auto" data-section="3">
                 <div class="bg object-fit">
                     <img src="./img/slides/example-hptn-slide-original.jpg" alt="">
@@ -442,7 +442,7 @@
                     </div>
                 </div>
             </div>
-            <!-- SECTION 4 -->
+            <!-- SECTION 4 # Profile: India/IVLP (slide 1) -->
             <div class="section fp-tablecell-auto" data-section="4">
                 <div class="bg object-fit top">
                     <img src="./img/slides/profile-india-slide1-original.jpg" alt="">
@@ -506,7 +506,7 @@
                     </div>
                 </div>
             </div>
-            <!-- SECTION 5 -->
+            <!-- SECTION 5 # Profile: India/IVLP (slide 2)-->
             <div class="section fp-tablecell-auto" data-section="5">
                 <div class="bg object-fit">
                     <img src="./img/slides/profile-india-slide2-original.jpg" alt="">
@@ -535,7 +535,7 @@
                     </div>
                 </div>
             </div>
-            <!-- SECTION 6 -->
+            <!-- SECTION 6 # Example: Sino-implant (II) -->
             <div class="section fp-tablecell-auto" data-section="6">
                 <div class="bg object-fit">
                     <img src="./img/slides/example-sinoimplant-slide-original.jpg" alt="">
@@ -609,7 +609,7 @@
                     </div>
                 </div>
             </div>
-            <!-- SECTION 7 -->
+            <!-- SECTION 7 # Profile: Succeed 2020 (slide 1) -->
             <div class="section fp-tablecell-auto" data-section="7">
                 <div class="bg object-fit">
                     <img src="./img/slides/profile-succeed2020-slide1-original.jpg" alt="">
@@ -681,7 +681,7 @@
                     </div>
                 </div>
             </div>
-            <!-- SECTION 8 -->
+            <!-- SECTION 8 # Profile: Succeed 2020 (slide 2) -->
             <div class="section fp-tablecell-auto" data-section="8">
                 <div class="bg object-fit">
                     <img src="./img/slides/profile-succeed2020-slide2-original.jpg" alt="">
@@ -709,7 +709,7 @@
                     </div>
                 </div>
             </div>
-            <!-- SECTION 9 -->
+            <!-- SECTION 9 # Example: TB -->
             <div class="section fp-tablecell-auto" data-section="9">
                 <div class="bg object-fit">
                     <img src="./img/slides/example-tb-slide-original.jpg" alt="">
@@ -789,7 +789,7 @@
                     </div>
                 </div>
             </div>
-            <!-- SECTION 10 -->
+            <!-- SECTION 10 # Profile: Tanzania -->
             <div class="section fp-tablecell-auto" data-section="10">
                 <div class="bg object-fit">
                     <img src="./img/slides/profile-tanzania-slide-original.jpg" alt="">
@@ -886,7 +886,7 @@
                     </div>
                 </div>
             </div>
-            <!-- SECTION 11 -->
+            <!-- SECTION 11 # Example: Myanmar -->
             <div class="section fp-tablecell-auto" data-section="11">
                 <div class="bg object-fit">
                     <img src="./img/slides/example-myanmar-slide-original.jpg" alt="">
@@ -984,7 +984,7 @@
                     </div>
                 </div>
             </div>
-            <!-- SECTION 12 -->
+            <!-- SECTION 12 # Profile: Afghanistan (slide 1) -->
             <div class="section fp-tablecell-auto" data-section="12">
                 <div class="bg object-fit">
                     <img src="./img/slides/university-background.jpg" alt="">
@@ -1083,7 +1083,79 @@
                     </div>
                 </div>
             </div>
-            <!-- SECTION 13 -->
+            <!-- SECTION 13 # Profile: Afghanistan (slide 2) -->
+            <div class="section fp-tablecell-auto" data-section="13">
+                <div class="bg object-fit">
+                    <img src="./img/slides/profile-afghanistan-slide2-original.jpg" alt="">
+                </div>
+                <div class="bg-screen purple"></div>
+                <div class="grid-x inner-frame">
+                    <div class="small-12 cell grid-y align-center">
+                        <div class="cell shrink slide-title stagger-in grid-x">
+                            <div class="cell medium-6 large-4">
+                                <h2>“This department is the first food technology program in our country.” </h2>
+                            </div>
+                        </div>
+                        <div class="cell shrink">
+                            <hr class="invisible">
+                        </div>
+                        <div class="cell shrink slide-subtitle stagger-in">
+                            <h3>Yosouf Jami</h3>
+                            <h3>University dean, Afghanistan</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="drawer-button_container" data-toggle="13">
+                    <img class="drawer-button align-self-middle m2" src="./img/icons/menu-button.svg" alt="">
+                    <img class="drawer-close-button align-self-middle m2" src="./img/icons/close-button.svg" alt="">
+                    <span class="h6 uppercase drawer-button_label">Learn More</span>
+                </div>
+                <div class="leftDrawer" data-toggle="13">
+                    <div class="grid-y grid-padding-x grid-padding-y">
+                        <section class="cell auto">
+                            <h1 class="drawer-title">Technology to drive better outcomes</h1>
+                            <div class="drawer-content">
+                                <p>The potential for digital technologies to transform societies for the better and address
+                                    some of the world’s most pressing challenges has never been greater. In Liberia and Ghana,
+                                    FHI 360 is using technology to collect data to improve the quality and timeliness of
+                                    decision-making, enhance program outcomes and improve accountability.</p>
+                                <p>
+                                    <strong>Mobile payments = regular salaries
+                                        <strong>
+                                </p>
+                                <p>FHI 360, in partnership with the Liberian government, is transforming the way its teachers
+                                    and health care workers are being paid. In the past, teachers needed to leave work and
+                                    travel long distances to be paid, costing them time and money and causing them to be
+                                    away from their duty station. In July 2016, 67 teachers began receiving their pay digitally
+                                    by mobile money, an easily accessible substitute for cash. By the end of 2017, that number
+                                    had climbed to more than 3,000 teachers and 800 health care workers in nearly all of
+                                    Liberia’s counties. For civil servants, this means receiving the regular salary to which
+                                    they are entitled, without hassles. The Government of Liberia also benefits: It can distribute
+                                    payments quicker, with more transparent tracking of transactions.</p>
+                                <p>
+                                    <hr>
+                                </p>
+                                <p>
+                                    <strong>Project name</strong>
+                                </p>
+                                <p>Mobile Solutions Technical Assistance and Research (mSTAR)</p>
+                                <p>
+                                    <strong>Funder</strong>
+                                </p>
+                                <p>U.S. National Institutes of Health (National Institute of Allergy and Infectious Diseases)
+                                    <p>
+                            </div>
+                        </section>
+                    </div>
+                </div>
+                <div class="photo-credit-container">
+                    <div class="photo-credit-trigger grid-x grid-padding-x align-middle">
+                        <span class="cell auto">Photo credit</span>
+                        <img src="./img/icons/down-chevron.svg" alt="">
+                    </div>
+                </div>
+            </div>
+            <!-- SECTION 13 # Example: mSTAR -->
             <div class="section fp-tablecell-auto" data-section="13">
                 <div class="bg object-fit">
                     <img src="./img/slides/example-mstar-slide-original.jpg" alt="">
@@ -1173,7 +1245,7 @@
                     </div>
                 </div>
             </div>
-            <!-- SECTION 14 -->
+            <!-- SECTION 14 # Learn More -->
             <div class="section fp-tablecell-auto" data-section="14">
                 <div class="bg-screen"></div>
                 <div class="grid-y align-center" style="height: 100vh;">
