add up down nav, toc progress, photog credits
Signed-off-by: Sean Harrington <sean@never-not.com>

--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
                             <div class="toc-toggle-inner">
                                 Start
                             </div>
+                            <div class="toc-progress">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="48.5" height="48.5" viewBox="0 0 48.5 48.5">
+                                    <circle cx="24.25" cy="24.25" r="23.5" style="fill: none;stroke: #000;stroke-miterlimit: 10;stroke-width: 2px" />
+                                </svg>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -71,6 +76,10 @@
         </div>
 
         <div id="fullpage">
+            <nav id="up-down">
+                <img data-moveup src="./img/icons/arrowup-icon.svg" />
+                <img data-movedown src="./img/icons/arrowup-icon.svg" />
+            </nav>
             <div class="section intro">
                 <div class="grid-x align-center align-middle">
                     <div class="intro-header skip-intro">
@@ -284,15 +293,13 @@
                         </section>
                     </div>
                 </div>
-                <div class="photo-credit-container">
-                    <div class="photo-credit-trigger grid-x grid-padding-x align-middle">
-                        <span class="cell auto">Photo credit</span>
-                        <img src="./img/icons/down-chevron.svg" alt="">
-                    </div>
-                </div>
             </div>
             <!-- SECTION 1 # Profile: Jordan (slide 1) -->
             <div class="section fp-tablecell-auto" data-section="1">
+                <div class="photo-credits">
+                    <h6>
+                        <span>Photo:</span>Mohammad Magayda/FHI 360</h6>
+                </div>
                 <div class="bg object-fit">
                     <img src="./img/slides/profile-jordan-slide1-original.jpg" alt="">
                 </div>
@@ -343,14 +350,18 @@
                     </div>
                 </div>
                 <div class="photo-credit-container">
-                    <div class="photo-credit-trigger grid-x grid-padding-x">
-                        <span>Photo credit</span>
+                    <div class="photo-credit-trigger grid-x grid-padding-x align-middle">
+                        <span class="cell auto">Photo credit</span>
                         <img src="./img/icons/down-chevron.svg" alt="">
                     </div>
                 </div>
             </div>
             <!-- SECTION 2 # Profile: Jordan (slide 2) -->
             <div class="section fp-tablecell-auto" data-section="2">
+                <div class="photo-credits">
+                    <h6>
+                        <span>Photo:</span>As Hardworking as a Bee, Dirar Shawagfeh/FHI 360</h6>
+                </div>
                 <div class="bg object-fit">
                     <img src="./img/slides/profile-jordan-slide2-original.jpg" alt="">
                 </div>
@@ -379,6 +390,10 @@
             </div>
             <!-- SECTION 3 # Example: HPTN -->
             <div class="section fp-tablecell-auto" data-section="3">
+                <div class="photo-credits">
+                    <h6>
+                        <span>Photo:</span>Jessica Scranton/FHI 360</h6>
+                </div>
                 <div class="bg object-fit">
                     <img src="./img/slides/example-hptn-slide-original.jpg" alt="">
                 </div>
@@ -444,6 +459,10 @@
             </div>
             <!-- SECTION 4 # Profile: India/IVLP (slide 1) -->
             <div class="section fp-tablecell-auto" data-section="4">
+                <div class="photo-credits">
+                    <h6>
+                        <span>Photo:</span>Vivek Singh/The Verbatim Agency for FHI 360</h6>
+                </div>
                 <div class="bg object-fit top">
                     <img src="./img/slides/profile-india-slide1-original.jpg" alt="">
                 </div>
@@ -508,6 +527,10 @@
             </div>
             <!-- SECTION 5 # Profile: India/IVLP (slide 2)-->
             <div class="section fp-tablecell-auto" data-section="5">
+                <div class="photo-credits">
+                    <h6>
+                        <span>Photo:</span>Vivek Singh/The Verbatim Agency for FHI 360</h6>
+                </div>
                 <div class="bg object-fit">
                     <img src="./img/slides/profile-india-slide2-original.jpg" alt="">
                 </div>
@@ -537,6 +560,10 @@
             </div>
             <!-- SECTION 6 # Example: Sino-implant (II) -->
             <div class="section fp-tablecell-auto" data-section="6">
+                <div class="photo-credits">
+                    <h6>
+                        <span>Photo:</span>Jessica Scranton/FHI 360</h6>
+                </div>
                 <div class="bg object-fit">
                     <img src="./img/slides/example-sinoimplant-slide-original.jpg" alt="">
                 </div>
@@ -611,6 +638,10 @@
             </div>
             <!-- SECTION 7 # Profile: Succeed 2020 (slide 1) -->
             <div class="section fp-tablecell-auto" data-section="7">
+                <div class="photo-credits">
+                    <h6>
+                        <span>Photo:</span>Leanne Gray/FHI 360</h6>
+                </div>
                 <div class="bg object-fit">
                     <img src="./img/slides/profile-succeed2020-slide1-original.jpg" alt="">
                 </div>
@@ -683,6 +714,10 @@
             </div>
             <!-- SECTION 8 # Profile: Succeed 2020 (slide 2) -->
             <div class="section fp-tablecell-auto" data-section="8">
+                <div class="photo-credits">
+                    <h6>
+                        <span>Photo:</span>Leanne Gray/FHI 360</h6>
+                </div>
                 <div class="bg object-fit">
                     <img src="./img/slides/profile-succeed2020-slide2-original.jpg" alt="">
                 </div>
@@ -711,6 +746,10 @@
             </div>
             <!-- SECTION 9 # Example: TB -->
             <div class="section fp-tablecell-auto" data-section="9">
+                <div class="photo-credits">
+                    <h6>
+                        <span>Photo:</span>Jessica Scranton/FHI 360</h6>
+                </div>
                 <div class="bg object-fit">
                     <img src="./img/slides/example-tb-slide-original.jpg" alt="">
                 </div>
@@ -791,6 +830,10 @@
             </div>
             <!-- SECTION 10 # Profile: Tanzania -->
             <div class="section fp-tablecell-auto" data-section="10">
+                <div class="photo-credits">
+                    <h6>
+                        <span>Photo:</span>Leanne Gray/FHI 360</h6>
+                </div>
                 <div class="bg object-fit">
                     <img src="./img/slides/profile-tanzania-slide-original.jpg" alt="">
                 </div>
@@ -888,6 +931,10 @@
             </div>
             <!-- SECTION 11 # Example: Myanmar -->
             <div class="section fp-tablecell-auto" data-section="11">
+                <div class="photo-credits">
+                    <h6>
+                        <span>Photo:</span>Maxiphoto/iStockPhoto</h6>
+                </div>
                 <div class="bg object-fit">
                     <img src="./img/slides/example-myanmar-slide-original.jpg" alt="">
                 </div>
@@ -986,6 +1033,10 @@
             </div>
             <!-- SECTION 12 # Profile: Afghanistan (slide 1) -->
             <div class="section fp-tablecell-auto" data-section="12">
+                <div class="photo-credits">
+                    <h6>
+                        <span>Photo:</span>Kiana Hayeri/The Verbatim Agency for FHI 360</h6>
+                </div>
                 <div class="bg object-fit">
                     <img src="./img/slides/university-background.jpg" alt="">
                 </div>
@@ -1085,6 +1136,10 @@
             </div>
             <!-- SECTION 13 # Profile: Afghanistan (slide 2) -->
             <div class="section fp-tablecell-auto" data-section="13">
+                <div class="photo-credits">
+                    <h6>
+                        <span>Photo:</span>Kiana Hayeri/The Verbatim Agency for FHI 360</h6>
+                </div>
                 <div class="bg object-fit">
                     <img src="./img/slides/profile-afghanistan-slide2-original.jpg" alt="">
                 </div>
@@ -1157,6 +1212,10 @@
             </div>
             <!-- SECTION 13 # Example: mSTAR -->
             <div class="section fp-tablecell-auto" data-section="13">
+                <div class="photo-credits">
+                    <h6>
+                        <span>Photo:</span>John O'Bryan/USAID (CC BY-ND 2.0)</h6>
+                </div>
                 <div class="bg object-fit">
                     <img src="./img/slides/example-mstar-slide-original.jpg" alt="">
                 </div>
@@ -1245,7 +1304,7 @@
                     </div>
                 </div>
             </div>
-            <!-- SECTION 14 # Learn More -->
+            <!-- # Learn More -->
             <div class="section fp-tablecell-auto" data-section="14">
                 <div class="bg-screen"></div>
                 <div class="grid-y align-center" style="height: 100vh;">
