add table of contents circle
Signed-off-by: Sean Harrington <sean@never-not.com>

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                 </div>
             </div>
             <!-- SECTION 1 # Profile: Jordan (slide 1) -->
-            <div class="section fp-tablecell-auto" data-section="1">
+            <div class="section fp-tablecell-auto" data-section="1" data-toc="1">
                 <div class="photo-credits">
                     <h6>
                         <span>Photo:</span>Mohammad Magayda/FHI 360</h6>
@@ -357,7 +357,7 @@
                 </div>
             </div>
             <!-- SECTION 2 # Profile: Jordan (slide 2) -->
-            <div class="section fp-tablecell-auto" data-section="2">
+            <div class="section fp-tablecell-auto" data-section="2" data-toc="1">
                 <div class="photo-credits">
                     <h6>
                         <span>Photo:</span>As Hardworking as a Bee, Dirar Shawagfeh/FHI 360</h6>
@@ -389,7 +389,7 @@
                 </div>
             </div>
             <!-- SECTION 3 # Example: HPTN -->
-            <div class="section fp-tablecell-auto" data-section="3">
+            <div class="section fp-tablecell-auto" data-section="3" data-toc="2">
                 <div class="photo-credits">
                     <h6>
                         <span>Photo:</span>Jessica Scranton/FHI 360</h6>
@@ -458,7 +458,7 @@
                 </div>
             </div>
             <!-- SECTION 4 # Profile: India/IVLP (slide 1) -->
-            <div class="section fp-tablecell-auto" data-section="4">
+            <div class="section fp-tablecell-auto" data-section="4" data-toc="3">
                 <div class="photo-credits">
                     <h6>
                         <span>Photo:</span>Vivek Singh/The Verbatim Agency for FHI 360</h6>
@@ -526,7 +526,7 @@
                 </div>
             </div>
             <!-- SECTION 5 # Profile: India/IVLP (slide 2)-->
-            <div class="section fp-tablecell-auto" data-section="5">
+            <div class="section fp-tablecell-auto" data-section="5" data-toc="3">
                 <div class="photo-credits">
                     <h6>
                         <span>Photo:</span>Vivek Singh/The Verbatim Agency for FHI 360</h6>
@@ -559,7 +559,7 @@
                 </div>
             </div>
             <!-- SECTION 6 # Example: Sino-implant (II) -->
-            <div class="section fp-tablecell-auto" data-section="6">
+            <div class="section fp-tablecell-auto" data-section="6" data-toc="4">
                 <div class="photo-credits">
                     <h6>
                         <span>Photo:</span>Jessica Scranton/FHI 360</h6>
@@ -637,7 +637,7 @@
                 </div>
             </div>
             <!-- SECTION 7 # Profile: Succeed 2020 (slide 1) -->
-            <div class="section fp-tablecell-auto" data-section="7">
+            <div class="section fp-tablecell-auto" data-section="7" data-toc="5">
                 <div class="photo-credits">
                     <h6>
                         <span>Photo:</span>Leanne Gray/FHI 360</h6>
@@ -713,7 +713,7 @@
                 </div>
             </div>
             <!-- SECTION 8 # Profile: Succeed 2020 (slide 2) -->
-            <div class="section fp-tablecell-auto" data-section="8">
+            <div class="section fp-tablecell-auto" data-section="8" data-toc="5">
                 <div class="photo-credits">
                     <h6>
                         <span>Photo:</span>Leanne Gray/FHI 360</h6>
@@ -745,7 +745,7 @@
                 </div>
             </div>
             <!-- SECTION 9 # Example: TB -->
-            <div class="section fp-tablecell-auto" data-section="9">
+            <div class="section fp-tablecell-auto" data-section="9" data-toc="6">
                 <div class="photo-credits">
                     <h6>
                         <span>Photo:</span>Jessica Scranton/FHI 360</h6>
@@ -829,7 +829,7 @@
                 </div>
             </div>
             <!-- SECTION 10 # Profile: Tanzania -->
-            <div class="section fp-tablecell-auto" data-section="10">
+            <div class="section fp-tablecell-auto" data-section="10" data-toc="7">
                 <div class="photo-credits">
                     <h6>
                         <span>Photo:</span>Leanne Gray/FHI 360</h6>
@@ -930,7 +930,7 @@
                 </div>
             </div>
             <!-- SECTION 11 # Example: Myanmar -->
-            <div class="section fp-tablecell-auto" data-section="11">
+            <div class="section fp-tablecell-auto" data-section="11" data-toc="8">
                 <div class="photo-credits">
                     <h6>
                         <span>Photo:</span>Maxiphoto/iStockPhoto</h6>
@@ -1032,7 +1032,7 @@
                 </div>
             </div>
             <!-- SECTION 12 # Profile: Afghanistan (slide 1) -->
-            <div class="section fp-tablecell-auto" data-section="12">
+            <div class="section fp-tablecell-auto" data-section="12" data-toc="9">
                 <div class="photo-credits">
                     <h6>
                         <span>Photo:</span>Kiana Hayeri/The Verbatim Agency for FHI 360</h6>
@@ -1135,7 +1135,7 @@
                 </div>
             </div>
             <!-- SECTION 13 # Profile: Afghanistan (slide 2) -->
-            <div class="section fp-tablecell-auto" data-section="13">
+            <div class="section fp-tablecell-auto" data-section="13" data-toc="9">
                 <div class="photo-credits">
                     <h6>
                         <span>Photo:</span>Kiana Hayeri/The Verbatim Agency for FHI 360</h6>
@@ -1210,8 +1210,8 @@
                     </div>
                 </div>
             </div>
-            <!-- SECTION 13 # Example: mSTAR -->
-            <div class="section fp-tablecell-auto" data-section="13">
+            <!-- SECTION 14 # Example: mSTAR -->
+            <div class="section fp-tablecell-auto" data-section="14" data-toc="10">
                 <div class="photo-credits">
                     <h6>
                         <span>Photo:</span>John O'Bryan/USAID (CC BY-ND 2.0)</h6>
@@ -1305,7 +1305,7 @@
                 </div>
             </div>
             <!-- # Learn More -->
-            <div class="section fp-tablecell-auto" data-section="14">
+            <div class="section fp-tablecell-auto" data-section="15">
                 <div class="bg-screen"></div>
                 <div class="grid-y align-center" style="height: 100vh;">
                     <div class="cell small-auto medium-9 grid-x p2">
