New ceo section style, counter script, TOC circle animation, share menu hover
Signed-off-by: Sean Harrington <sean@never-not.com>

--- a/index.html
+++ b/index.html
@@ -56,8 +56,30 @@
                             <a href="#" data-ceoLink>CEO Letter</a>
                         </li>
                     </ul>
-                    <div class="cell shrink">
+                    <div class="cell shrink share-menu">
                         <img src="https://icon.now.sh/share" alt="">
+                        <ul class="menu simple">
+                            <li>
+                                <a href="#" class="cell auto">
+                                    <img width="30" src="./img/icons/fb-icon.svg" alt="share on facebook">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="cell auto">
+                                    <img width="30" src="./img/icons/twitter-icon.svg" alt="retweet">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="cell auto">
+                                    <img width="30" src="./img/icons/linkedin-icon.svg" alt="share on linkedin">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="cell auto">
+                                    <img width="30" src="./img/icons/link-icon.svg" alt="copy this link">
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                     <div class="cell shrink">
                         <div class="toc-toggle">
@@ -235,6 +257,7 @@
                     <img class="drawer-button align-self-middle m2" src="./img/icons/menu-button.svg" alt="">
                     <img class="drawer-close-button align-self-middle m2" src="./img/icons/close-button.svg" alt="">
                 </div>
+                <div data-closedrawer></div>
                 <div class="leftDrawer" data-toggle="0">
                     <div class="grid-y grid-padding-x grid-padding-y">
                         <section class="cell auto">
@@ -301,7 +324,9 @@
                         <span>Photo:</span>Mohammad Magayda/FHI 360</h6>
                 </div>
                 <div class="bg object-fit">
-                    <img src="./img/slides/profile-jordan-slide1-original.jpg" alt="">
+                    <!-- <img src="./img/slides/profile-jordan-slide1-original.jpg" alt=""> -->
+                    <img class="fore" src="./img/layers/profile-jordan-slide1-bg.png" alt="">
+                    <img class="back" src="./img/layers/profile-jordan-slide1-fg.png" alt="">
                 </div>
                 <div class="bg-screen"></div>
                 <div class="grid-x inner-frame">
@@ -323,6 +348,7 @@
                     <img class="drawer-close-button align-self-middle m2" src="./img/icons/close-button.svg" alt="">
                     <span class="h6 uppercase drawer-button_label">Read Story</span>
                 </div>
+                <div data-closedrawer></div>
                 <div class="leftDrawer" data-toggle="1">
                     <div class="grid-y grid-padding-x grid-padding-y">
                         <section class="cell auto">
@@ -423,6 +449,7 @@
                     <img class="drawer-close-button align-self-middle m2" src="./img/icons/close-button.svg" alt="">
                     <span class="h6 uppercase drawer-button_label">Learn More</span>
                 </div>
+                <div data-closedrawer></div>
                 <div class="leftDrawer" data-toggle="3">
                     <div class="grid-y grid-padding-x grid-padding-y">
                         <section class="cell auto">
@@ -486,6 +513,7 @@
                     <img class="drawer-close-button align-self-middle m2" src="./img/icons/close-button.svg" alt="">
                     <span class="h6 uppercase drawer-button_label">Read Story</span>
                 </div>
+                <div data-closedrawer></div>
                 <div class="leftDrawer" data-toggle="4">
                     <div class="grid-y grid-padding-x grid-padding-y">
                         <section class="cell auto">
@@ -593,6 +621,7 @@
                     <img class="drawer-close-button align-self-middle m2" src="./img/icons/close-button.svg" alt="">
                     <span class="h6 uppercase drawer-button_label">Learn More</span>
                 </div>
+                <div data-closedrawer></div>
                 <div class="leftDrawer" data-toggle="6">
                     <div class="grid-y grid-padding-x grid-padding-y">
                         <section class="cell auto">
@@ -665,6 +694,7 @@
                     <img class="drawer-close-button align-self-middle m2" src="./img/icons/close-button.svg" alt="">
                     <span class="h6 uppercase drawer-button_label">Read Story</span>
                 </div>
+                <div data-closedrawer></div>
                 <div class="leftDrawer" data-toggle="7">
                     <div class="grid-y grid-padding-x grid-padding-y">
                         <section class="cell auto">
@@ -782,6 +812,7 @@
                         <img class="drawer-close-button align-self-middle m2" src="./img/icons/close-button.svg" alt="">
                         <span class="h6 uppercase drawer-button_label">Learn More</span>
                     </div>
+                    <div data-closedrawer></div>
                     <div class="leftDrawer" data-toggle="9">
                         <div class="grid-y grid-padding-x grid-padding-y">
                             <section class="cell auto">
@@ -857,6 +888,7 @@
                     <img class="drawer-close-button align-self-middle m2" src="./img/icons/close-button.svg" alt="">
                     <span class="h6 uppercase drawer-button_label">Read Story</span>
                 </div>
+                <div data-closedrawer></div>
                 <div class="leftDrawer" data-toggle="10">
                     <div class="grid-y grid-padding-x grid-padding-y">
                         <section class="cell auto">
@@ -967,6 +999,7 @@
                     <img class="drawer-close-button align-self-middle m2" src="./img/icons/close-button.svg" alt="">
                     <span class="h6 uppercase drawer-button_label">Learn More</span>
                 </div>
+                <div data-closedrawer></div>
                 <div class="leftDrawer" data-toggle="11">
                     <div class="grid-y grid-padding-x grid-padding-y">
                         <section class="cell auto">
@@ -1060,6 +1093,7 @@
                     <img class="drawer-close-button align-self-middle m2" src="./img/icons/close-button.svg" alt="">
                     <span class="h6 uppercase drawer-button_label">Read Story</span>
                 </div>
+                <div data-closedrawer></div>
                 <div class="leftDrawer" data-toggle="12">
                     <div class="grid-y grid-padding-x grid-padding-y">
                         <section class="cell auto">
@@ -1165,6 +1199,7 @@
                     <img class="drawer-close-button align-self-middle m2" src="./img/icons/close-button.svg" alt="">
                     <span class="h6 uppercase drawer-button_label">Learn More</span>
                 </div>
+                <div data-closedrawer></div>
                 <div class="leftDrawer" data-toggle="13">
                     <div class="grid-y grid-padding-x grid-padding-y">
                         <section class="cell auto">
@@ -1240,7 +1275,7 @@
                                     <div class="grid-y">
                                         <div class="cell grid-x align-middle">
                                             <div class="counter h3">
-                                                <span data-countup>3,000</span>+
+                                                <span data-countup>3000</span>+
                                                 <label>teachers</label>
                                             </div>
                                             <div class="counter h3">
@@ -1259,6 +1294,7 @@
                     <img class="drawer-close-button align-self-middle m2" src="./img/icons/close-button.svg" alt="">
                     <span class="h6 uppercase drawer-button_label">Learn More</span>
                 </div>
+                <div data-closedrawer></div>
                 <div class="leftDrawer" data-toggle="13">
                     <div class="grid-y grid-padding-x grid-padding-y">
                         <section class="cell auto">
