mobile additions, beekeeper parallax
Signed-off-by: Sean Harrington <sean@never-not.com>

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="cell auto grid-y align-center">
                 <div class="grid-x grid-padding-x align-middle">
-                    <ul class="cell auto menu simple">
+                    <ul class="cell auto menu simple main">
                         <li>
                             <a href="#">At a glance</a>
                         </li>
@@ -57,7 +57,7 @@
                         </li>
                     </ul>
                     <div class="cell shrink share-menu">
-                        <img src="https://icon.now.sh/share" alt="">
+                        <img class="share-icon" src="https://icon.now.sh/share" alt="">
                         <ul class="menu simple">
                             <li>
                                 <a href="#" class="cell auto">
@@ -74,11 +74,11 @@
                                     <img width="30" src="./img/icons/linkedin-icon.svg" alt="share on linkedin">
                                 </a>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <a href="#" class="cell auto">
                                     <img width="30" src="./img/icons/link-icon.svg" alt="copy this link">
                                 </a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                     <div class="cell shrink">
@@ -318,17 +318,17 @@
                 </div>
             </div>
             <!-- SECTION 1 # Profile: Jordan (slide 1) -->
-            <div class="section fp-tablecell-auto" data-section="1" data-toc="1">
+            <div class="section fp-tablecell-auto" data-section="1" data-toc="1" data-parallax="zoom">
                 <div class="photo-credits">
                     <h6>
                         <span>Photo:</span>Mohammad Magayda/FHI 360</h6>
                 </div>
                 <div class="bg object-fit">
                     <!-- <img src="./img/slides/profile-jordan-slide1-original.jpg" alt=""> -->
-                    <img class="fore" src="./img/layers/profile-jordan-slide1-bg.png" alt="">
-                    <img class="back" src="./img/layers/profile-jordan-slide1-fg.png" alt="">
+                    <img class="back" src="./img/layers/profile-jordan-slide1-bg.jpg" alt="">
+                    <img class="fore" src="./img/layers/profile-jordan-slide1-fg.png" alt="">
                 </div>
-                <div class="bg-screen"></div>
+                <div class="bg-screen black"></div>
                 <div class="grid-x inner-frame">
                     <div class="small-12 medium-6 large-6 cell grid-y align-center">
                         <div class="cell shrink slide-title stagger-in">
